--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,7 @@ jobs:
       matrix:
         include:
           - name: Default
-            fatures: ""
+            features: ""
           - name: No features
             features: --no-default-features
     steps:
@@ -47,4 +47,4 @@ jobs:
 
       - name: Run cargo test
         working-directory: stax
-        run: cargo build ${{ matrix.features }}
+        run: cargo test ${{ matrix.features }}
