--- a/picojson/Cargo.toml
+++ b/picojson/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "stax"
+name = "picojson"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,8 +20,7 @@ defmt = ["dep:defmt"]
 [dependencies]
 defmt = { version = "1.0.1", optional = true }
 # TODO: Optional, should be swappable with defmt
-log = "0.4.26"
-ujson = { path= "../tokenizer" }
+log = "0.4"
 
 [dev-dependencies]
 test-log = "0.2"
