--- a/picojson/Cargo.toml
+++ b/picojson/Cargo.toml
@@ -3,7 +3,7 @@ name = "picojson"
 version = "0.1.1"
 edition = "2021"
 license = "Apache-2.0"
-exclude = ["/.github/*"]
+exclude = ["/.github/**"]
 authors = ["kaidokert <kaidokert@gmail.com>"]
 readme = "../README.md"
 description = """
