--- a/.github/workflows/avr_tests.yaml
+++ b/.github/workflows/avr_tests.yaml
@@ -13,11 +13,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
+          components: rust-src
 
       - name: Install simavr and dependencies
         run: |
