--- a/.github/workflows/cross.yaml
+++ b/.github/workflows/cross.yaml
@@ -18,12 +18,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
+          targets: ${{ matrix.target }}
 
       - name: Build for target
         run: cargo build --release --target=${{ matrix.target }}
