Run bloat without fmt printing

--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -50,6 +50,8 @@ depth-1025 = []
 
 debug-trace = []
 
+no-fmt = []  # Disable ufmt output for binary size comparison
+
 pico-small = []
 pico-huge = []
 pico-tiny = []
