Apply suggestions from code review
Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -24,7 +24,7 @@ features = ["arduino-uno"]
 [profile.dev]
 panic = "abort"
 
-# Build profile for investigatinc panics in the code
+# Build profile for investigating panics in the code
 # We don't want to optimize away any code, but do
 # enable dead code elimination.
 [profile.panic_checks]
