--- a/.github/workflows/avr_tests.yaml
+++ b/.github/workflows/avr_tests.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Install simavr and dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y simavr avarice gcc-avr avr-libc
+          sudo apt-get install -y simavr gcc-avr avr-libc
 
       - name: Install cargo-bloat
         run: cargo install cargo-bloat
@@ -46,6 +46,11 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           components: rust-src
+
+      - name: Install simavr and dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y simavr gcc-avr avr-libc
 
       - name: Install cargo-binutils
         run: cargo install cargo-binutils
