Fix build again

--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -23,6 +23,8 @@ features = ["arduino-uno"]
 
 [profile.dev]
 panic = "abort"
+lto = true
+opt-level = "s"
 
 # Build profile for investigating panics in the code
 # We don't want to optimize away any code, but do
