--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -1,3 +1,6 @@
+# Profile specific rustflags for panic checking
+cargo-features = ["profile-rustflags"]
+
 [package]
 name = "avr_demo"
 version = "0.1.0"
@@ -9,7 +12,7 @@ autobenches = false
 [dependencies]
 picojson = { path = "../picojson", default-features = false, features = ["int32"]}
 panic-halt = "1.0"
-ufmt = "0.2"
+ufmt = { version = "0.2", optional = true }
 serde = { version = "1", default-features = false, features = ["derive"] }
 serde-json-core = { version = "0.6", default-features = false }
 
@@ -23,6 +26,25 @@ panic = "abort"
 lto = true
 opt-level = "s"
 
+# Build profile for investigating panics in the code
+# We don't want to optimize away any code, but do
+# enable dead code elimination.
+[profile.panic_checks]
+inherits = "dev"
+panic = "abort"
+opt-level = 1         # Minimal code size optimizations, mostly just DCE
+lto = "fat"           # Enable fat LTO for better dead code elimination
+codegen-units = 1       # helps DCE across units
+strip = "none"          # Keep symbols
+debug = "full"
+incremental = false
+overflow-checks = true  # Enable ( it's a default, but we want to be explicit )
+# Disable the compiler's built-in undefined behavior checks.
+# These checks can insert their own panic paths, creating noise in our analysis.
+# We are focused on panics from application logic (e.g., unwrap, bounds checks),
+# so disabling these helps narrow the focus. This is an unstable flag.
+rustflags = ["-Z", "ub-checks=no"]
+
 [profile.release]
 panic = "abort"
 codegen-units = 1
@@ -31,7 +53,7 @@ lto = true
 opt-level = "s"
 
 [features]
-default = ["depth-7", "pico-tiny"]
+default = ["depth-7", "pico-tiny", "ufmt"]
 
 depth-7 = []
 depth-9 = []
