--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -10,7 +10,7 @@ autotests = false
 autobenches = false
 
 [dependencies]
-picojson = { path = "../picojson", default-features = false, features = ["int32"]}
+picojson = { path = "../picojson", default-features = false}
 panic-halt = "1.0"
 ufmt = { version = "0.2", optional = true }
 serde = { version = "1", default-features = false, features = ["derive"] }
@@ -32,7 +32,7 @@ opt-level = "s"
 [profile.panic_checks]
 inherits = "dev"
 panic = "abort"
-opt-level = 1         # Minimal code size optimizations, mostly just DCE
+opt-level = "z"         # Minimal code size optimizations, mostly just DCE
 lto = "fat"           # Enable fat LTO for better dead code elimination
 codegen-units = 1       # helps DCE across units
 strip = "none"          # Keep symbols
@@ -53,7 +53,10 @@ lto = true
 opt-level = "s"
 
 [features]
-default = ["depth-7", "pico-tiny", "ufmt"]
+default = ["depth-7", "pico-tiny", "ufmt", "int32"]
+
+int8 = [ "picojson/int8"]
+int32 = [ "picojson/int32"]
 
 depth-7 = []
 depth-9 = []
@@ -75,3 +78,4 @@ debug-trace = []
 pico-small = []
 pico-huge = []
 pico-tiny = []
+unsafe-utf8 = ["picojson/unsafe-utf8"]
