Fix panic checks

--- a/avr_demo/Cargo.toml
+++ b/avr_demo/Cargo.toml
@@ -22,22 +22,11 @@ features = ["arduino-uno"]
 
 [profile.dev]
 panic = "abort"
-lto = true
-opt-level = "s"
-
-# Build profile for investigating panics in the code
-# We don't want to optimize away any code, but do
-# enable dead code elimination.
-[profile.panic_checks]
-inherits = "dev"
-panic = "abort"
-opt-level = "z"         # Minimal code size optimizations, mostly just DCE
-lto = "fat"           # Enable fat LTO for better dead code elimination
+lto = "fat"
+opt-level = "z"         # Least amount of panic generation
 codegen-units = 1       # helps DCE across units
 strip = "none"          # Keep symbols
 debug = "full"
-incremental = false
-overflow-checks = true  # Enable ( it's a default, but we want to be explicit )
 # Disable the compiler's built-in undefined behavior checks.
 # These checks can insert their own panic paths, creating noise in our analysis.
 # We are focused on panics from application logic (e.g., unwrap, bounds checks),
