--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,8 +17,6 @@ jobs:
 
       - name: Run cargo check
         run: cargo check
-      - name: Run cargo check --no-default-features
-        run: cargo check --no-default-features
 
   test:
     name: Tests
@@ -31,9 +29,15 @@ jobs:
           - name: Default (int64 + float)
             features: ""
 
-          # No features baseline
-          - name: No features
-            features: --no-default-features
+          # int8 configurations
+          - name: int8 + float
+            features: --no-default-features --features "int8,float"
+          - name: int8 + float-skip
+            features: --no-default-features --features "int8,float-skip"
+          - name: int8 + float-error
+            features: --no-default-features --features "int8,float-error"
+          - name: int8 + float-truncate
+            features: --no-default-features --features "int8,float-truncate"
 
           # int32 configurations
           - name: int32 + float
