--- a/.github/workflows/avr_tests.yaml
+++ b/.github/workflows/avr_tests.yaml
@@ -67,7 +67,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        example: [test_picojson]
+        example: [test_picojson, test_streamparser]
         int_type: [int8, int32]
         profile: [release, dev]
         pico_size: [pico-tiny, pico-huge]
