--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -97,10 +97,15 @@ jobs:
           fi
           echo "Found $(find conformance_tests/test_parsing -name '*.json' | wc -l) conformance test files"
 
-      - name: Run conformance tests (SliceParser)
+      - name: Run JSONTestSuite conformance tests
         working-directory: picojson
         run: cargo test --features remote-tests
         continue-on-error: true
 
+      - name: Run JSON_checker conformance tests
+        working-directory: picojson
+        run: cargo test --features remote-tests,json-checker-tests
+        continue-on-error: true
+
       - name: Report conformance test results
-        run: echo "::notice::Conformance tests completed - check logs above for any failures"
+        run: echo "::notice::All conformance tests completed - check logs above for any failures"
