--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -3,10 +3,9 @@ name: Coverage
 on:
   push:
     branches:
-      - '*'
+      - main
+      - 'feature/**'
   pull_request:
-    branches:
-      - '*'
 
 
 jobs:
