--- a/picojson/Cargo.toml
+++ b/picojson/Cargo.toml
@@ -33,11 +33,8 @@ float-skip = []         # Skip float values during parsing (continue with next t
 float-error = []        # Error when encountering floats
 float-truncate = []     # Truncate floats to integers (1.7 → 1)
 
-# Remote conformance testing
+# Remote conformance test suites
 remote-tests = ["dep:ureq", "dep:zip"]
-
-# JSON_checker test suite from json.org
-json-checker-tests = []
 
 [package.metadata.conformance-tests]
 # JSONTestSuite configuration
