--- a/picojson/Cargo.toml
+++ b/picojson/Cargo.toml
@@ -49,3 +49,7 @@ zip = { version = "0.6", optional = true }
 
 [dev-dependencies]
 paste = "1.0"
+test-log = "0.2.18"
+
+[dependencies]
+log = "0.4.27"
