Pin AVR nightly to 2025-12-22 to fix DEV panic regression
Regression introduced in nightly-2025-12-23 where spurious panic symbols
appear in AVR DEV builds. RELEASE builds are unaffected.

Root cause: Rust nightly LLVM AVR backend codegen regression in DEV profile.

--- a/avr_demo/rust-toolchain.toml
+++ b/avr_demo/rust-toolchain.toml
@@ -1,5 +1,7 @@
+# Pinned to last known good nightly before AVR DEV build panic regression
+# Regression: nightly-2025-12-23 introduced spurious panic symbols in DEV profile
 [toolchain]
-channel = "nightly"
+channel = "nightly-2025-12-22"
 components = [
     "rustc",
     "cargo",
