--- a/.github/workflows/avr_tests.yaml
+++ b/.github/workflows/avr_tests.yaml
@@ -17,9 +17,10 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      - name: Install stable toolchain
+      - name: Install nightly toolchain for AVR
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: nightly-2025-11-01
           components: rust-src
 
       - name: Cache Rust dependencies
@@ -80,9 +81,10 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      - name: Install stable toolchain
+      - name: Install nightly toolchain for AVR
         uses: dtolnay/rust-toolchain@stable
         with:
+          toolchain: nightly-2025-11-01
           components: rust-src
 
       - name: Cache Rust dependencies
